# libuser

./: .gitignore  .gitmodules  Makefile  _attribute  _meta  libuser-0.56.13.tar.bz2  libuser-0.57.3.tar.xz  libuser-0.58.tar.xz  libuser.changes  libuser.spec  libuser.yaml  no_doc.patch
libuser/: ChangeLog  Makefile.am  Makefile.in  NEWS  TODO  aclocal.m4  config.h.in  configure  configure.ac  libuser.pc.in
libuser/apps/: apputil.c  apputil.h  lchage.1  lchage.c  lchfn.1  lchfn.c  lchsh.1  lchsh.c  lgroupadd.1  lgroupadd.c  lgroupdel.1  lgroupdel.c  lgroupmod.1  lgroupmod.c  lid.1  lid.c  lnewusers.1  lnewusers.c  lpasswd.1  lpasswd.c  luseradd.1  luseradd.c  luserdel.1  luserdel.c  lusermod.1  lusermod.c
libuser/docs/: Makefile.am  Makefile.in  libuser.conf.5.in
libuser/docs/reference/: Makefile.am  Makefile.in  libuser-docs.sgml  libuser-sections.txt
libuser/docs/reference/html/: api-index-full.html  ch01.html  deprecated-api-index.html  index.html  index.sgml  libuser-config.html  libuser-entity.html  libuser-error.html  libuser-fs.html  libuser-prompt.html  libuser-user.html  libuser-value.html  libuser.devhelp2
libuser/docs/sgml/: libuser-1.html  libuser-2.html  libuser.html  libuser.sgml  libuser.txt
libuser/lib/: common.c  config.c  config.h  entity.c  entity.h  error.c  error.h  fs.c  fs.h  getdate.c  getdate.y  internal.h  misc.c  modules.c  prompt.c  prompt.h  scache.c  user.c  user_private.h  util.c
libuser/modules/: files.c  ldap.c  sasldb.c
libuser/po/: LINGUAS  Makevars  POTFILES.in  ar.gmo  ar.po  as.gmo  as.po  bg.gmo  bg.po  bn.gmo  bn.po  bn_IN.gmo  bn_IN.po  bs.gmo  bs.po  ca.gmo  ca.po  cs.gmo  cs.po  cy.gmo  cy.po  da.gmo  da.po  de.gmo  de.po  de_CH.gmo  de_CH.po  el.gmo  el.po  en_GB.po  es.gmo  es.po  et.gmo  et.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  (+79 more)
libuser/python/: admin.c  common.h  debug.h  ent.c  ldap-script  libusermodule.c  misc.c  modules.txt  test-script
libuser/samples/: enum.c  field.c  genusers  homedir.c  lookup.c  prompt.c
libuser/tests/: alloc_port.c  config.conf.in  config_default_useradd  config_import.conf.in  config_import2.conf.in  config_login.defs  config_login2.defs  config_override.conf.in  config_test.c  config_test.py  config_test.sh  default_pw.conf.in  default_pw_test  default_pw_test.py  files_test  files_test.py  fs.conf.in  fs_test  fs_test.py  ldap.conf.in  ldap_skel.ldif  ldap_test  ldap_test.py  ldaprc  pwhash.conf.in  pwhash.py  pwhash_test  slapd.conf.in  utils.conf.in  utils_group  utils_gshadow  utils_passwd  utils_shadow  utils_test  valgrind.supp  wait_for_slapd_exit.c  wait_for_slapd_start.c
rpm/: 0001-Disable-docs-a-bit-more.patch  libuser.spec
